k8s/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec: 
      containers:
        - name: mongo
          image: mongo
          ports: 
            - containerPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector: 
    app: mongo
  ports:
    - name: mongo-port
      protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
