k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: townify-http.ayadweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-cluster
                port:
                  number: 3000

    - host: townify-database.ayadweb.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-service
                port:
                  number: 27017
